--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "entryninja/elastic-apm-laravel",
     "description": "A package to integrate Elastic APM into Laravel",
     "type": "library",
-    "license": "GNU General Public License v3.0",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "George Boot",
