--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,15 @@
         "illuminate/http": "5.5.x|5.6.x",
         "illuminate/routing": "5.5.x|5.6.x",
         "illuminate/support": "5.5.x|5.6.x",
-        "philkra/elastic-apm-php-agent": "^6.2",
+        "philkra/elastic-apm-php-agent": "dev-master",
         "ramsey/uuid": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/georgeboot/elastic-apm-php-agent"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "EntryNinja\\ElasticApmLaravel\\": "src/"
